--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0",
+    "build:watch": "ng build --watch --extract-css --source-map=true",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,17 +20,20 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "ngx-build-plus": "^10.1.1",
+    "node-sass": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.3",
-    "@angular/cli": "~10.1.3",
+    "@angular/cli": "^10.1.7",
     "@angular/compiler-cli": "~10.1.3",
-    "@types/node": "^12.11.1",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -38,7 +42,14 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "postcss": "^8.1.4",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-scss": "^3.0.2",
     "protractor": "~7.0.0",
+    "tailwindcss": "^1.9.6",
+    "tailwindcss-interaction-variants": "^5.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
